--- a/Frontend/website/src/assets/css/main.css
+++ b/Frontend/website/src/assets/css/main.css
@@ -69,13 +69,16 @@
 /* ===================================================================
    2. Global Resets & Base Styles
    =================================================================== */
+body {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
 *,
 *::before,
 *::after {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 html, body, #app {
